[package]
name = "acmed-dns-helper-dnspod"
version = "0.1.0"
authors = ["WANG Xuerui <git@xen0n.name>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"  # NOTE: switch to clap 0.3 once that is released
env_logger = "0.7"
hyper = "0.13"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
