[package]
name = "acmed-dns-helper-dnspod"
version = "0.2.0"
authors = ["WANG Xuerui <git@xen0n.name>"]
license = "Apache-2.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
structopt = "0.3"  # NOTE: switch to clap 0.3 once that is released
env_logger = "0.9"
futures-timer = "3.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
